# pymq

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
eventbus/: __init__.py  core.py  json.py  typing.py
eventbus/provider/: redis.py  simple.py
examples/chat-redis/: README.md  chat.py
examples/workqueue-localstack/: README.md  api.py  producer.py  worker.py
pymq/: __init__.py  core.py  exceptions.py  json.py  typing.py
pymq/provider/: aws.py  base.py  ipc.py  redis.py  simple.py
tests/: conftest.py  test_provider_ipc.py  test_provider_redis.py  test_provider_simple.py  test_pubsub.py  test_pymq.py  test_queue.py  test_rpc.py  test_typing.py  testutils.py
tests/base/: pubsub.py  queue.py  rpc.py
tests/provider/: __init__.py  test_aws.py  test_redis.py
