[metadata]
name = pymq
version = attr: pymq.__version__
url = https://github.com/thrau/pymq
author = Thomas Rausch
author_email = thomas@thrau.at
description = A simple message-oriented middleware library built for Python IPC across machine boundaries
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Networking

[options]
zip_safe = False
packages = find:

install_requires =

[options.extras_require]
# redis provider
redis =
    redis>=3.2.1
# ipc provider
ipc =
    posix_ipc==1.0.4
# full (includes all providers)
full =
    %(redis)s
    %(ipc)s

# developer/testing dependencies
test =
    redislite>=5.0.124623
    coverage[toml]>=5.0
    pytest-cov>=2.7.1
    coveralls
    black>=22.1
    isort>=5.10
    pytest>=7.0
    pytest-timeout>=2.1

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
